RUI-000: Fix cell align to center

--- a/src/components/charts/tables/tables.module.css
+++ b/src/components/charts/tables/tables.module.css
@@ -117,6 +117,7 @@
 .table tr td {
   color: var(--em-tablechart-color, #212129);
   font-weight: var(--em-tablechart-font-weight, 400);
+  text-align: center;
 }
 
 /* Bolt cells */
